k8s/base/randomquotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomquotes-deployment  
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: randomquotes-web
  template:
    metadata:
      labels:
        component: randomquotes-web
    spec:
      containers:
        - name: randomquotes-web
          image: scene316/randomquotes-k8s:0.1.39
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          imagePullPolicy: "Always"
          ports:
           - containerPort: 8080
             name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: randomquotes-app-cluster-ip-service  
spec:
  type: ClusterIP
  selector:
    component: randomquotes-web
  ports:
    - port: 6801
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: randomquotes-ingress-nginx  
spec:
  ingressClassName: nginx
  rules:
    - host: randomquotes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: randomquotes-app-cluster-ip-service
                port:
                  number: 6801
